# ShaftOCCT

./: .gitignore  CMakeLists.txt  README.md  ShaftApplication.cpp  ShaftBuilder.h  ShaftProportions.h  main.cpp  main.txt
console/: CMakeLists.txt  ShaftApplication.cpp  ShaftApplication.h
gui/: CMakeLists.txt  ShaftMainWindow.cpp  ShaftMainWindow.h  main.cpp  mainwindow.cpp  mainwindow.h
lib/: CMakeLists.txt  ShaftAppCore.cpp  ShaftAppCore.h  ShaftBuilder.h  ShaftProportions.h  Slot.h
